@@ -66,6 +66,9 @@ dimensions are fully encoded.
 .TP 
 \fB\-k\fR
 Keep idendifiers case (don't uppercase field names). 
+.TP 
+\fB\-?\fR
+Display version and usage information.
 
 .SH "INSTALLATION"
 .LP
