@@ -88,6 +88,9 @@ Create a GiST index on the geometry column.
 .TP 
 \fB\-N\fR <\fIpolicy\fR>
 Specify NULL geometries handling policy (insert,skip,abort).
+.TP 
+\fB\-?\fR
+Display version and usage information.
 
 .SH "INSTALLATION"
 .LP
